# AudioVerseEngine

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  build_audio_backend_log.txt  build_resonance_ffi_log.txt  resonance_cxx_check.txt  resonance_cxx_check2.txt  resonance_cxx_check3.txt  resonance_cxx_check4.txt  setup_resonance_audio.ps1
.github/: copilot-instructions.md
.github/instructions/: resonance-cxx-bridge.instructions.md
app-android/: Cargo.toml
app-bevy-windows/: Cargo.toml  README.md
app-bevy-windows/assets/: README.md
app-bevy-windows/src/: main.rs
app-cli/: Cargo.toml
app-cli/src/: main.rs
app-windows/: Cargo.toml
app-windows/src/: main.rs
asset-manager/: Cargo.toml  README.md  requirement.md
asset-manager/src/: asset_manager.rs  asset_pkg.rs  lib.rs  loader.rs  pkg_format.rs  sfx.rs  sfx_loader.rs  streaming_loader.rs  util.rs
asset-manager/tests/: loader_tests.rs  pkg_roundtrip.rs  pkg_tests.rs  resample_tests.rs  sfx_blob_tests.rs  sfx_loader_tests.rs  target_rate_tests.rs
assets/worlds/: default.world.ron
audio-backend/: Cargo.toml  README.md  REQUIREMENTS.md  build_example.txt  build_example2.txt  build_example3.txt  test_output.txt  test_output_windows.txt
audio-backend/examples/: windows_play.rs
audio-backend/src/: cpal_backend.rs  lib.rs  mock_backend.rs  test_play.rs
audio-backend/tests/: audio_backend.rs  backend_api_shutdown.rs  resonance_integration.rs  test-mock-audiobackend.rs  test-windows-audiobackend.rs  test_play.rs  windows_backend_edgecases.rs
audio-system/: Cargo.toml  README.md  build_out.txt  build_output.txt  test_output.txt
audio-system/src/: audio_world.rs  bevy_integration.rs  lib.rs  spacialiser.rs
content-pipeline/: Cargo.toml
docs/: TODO.md  audio-game-engine-infered-contract-from-unity-plugin-impl.md  audio-game-engine.md  audio-must-haves.md  audio-renderer-planned-features.md  audio-system-design.md  audio-system.md  audio_first_engine_concept.md  audio_game_engine_design.md  cxx-reference.md  engine-resonance-integration-concepts.md  engine-resonance-technical-integrations.md  engine_headers_reference.md  engine_public_apis_flow.md  integration-design.md  resonance_audio_crates_structure.md  resonance_cxx_guidance.md  rust_c_cxx_crate_template_ready_to_build.md  todos.md  unity_plugin_rust_mapping.md
engine-audio/: Cargo.toml
engine-audio/src/: lib.rs
engine-core/: Cargo.toml
engine-core/examples/: load_world.rs  world_min.json
engine-core/src/: audio.rs  bevy_extras.rs  components.rs  engine.rs  events.rs  lib.rs  navmesh.rs  pathfinding.rs  physics.rs  plugin.rs  portal.rs  spawn.rs  systems.rs  transform.rs  world.rs  world_loader.rs
engine-core/tests/: climb_and_ceiling.rs  dive_and_ocean.rs  navigation_space.rs  physics_events.rs  portal_navigation.rs  systems_tests.rs  tnua_controller_integration.rs  unit_tests.rs  world_loader_smoke.rs
event-bus/: Cargo.toml
event-bus/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: backend_edgecases.rs  engine_edgecases.rs  engine_loop.rs  integration.rs  play_sfx_integration.rs  real_audio_integration.rs  real_audio_manual.rs  sfx_pkg_integration.rs  smoke_api.rs
resonance/: Cargo.toml
resonance-audio-engine/: Cargo.toml
resonance-audio-engine/src/: bridge.rs  example.rs  lib.rs  renderer.rs  ringbuffer.rs  spatializer.rs  types.rs
resonance-audio-engine/tests/: backend_edgecases.rs  renderer_edgecases.rs  renderer_integration.rs  spatializer_tests.rs
resonance-cxx/: Cargo.toml  README.md  build.rs
resonance-cxx/cxx/include/: resonance_bridge.h
resonance-cxx/cxx/src/: resonance_api_wrapper.cc  resonance_bridge.cc
resonance-cxx/src/: audio_world.rs  bridge.rs  lib.rs
resonance-cxx/src/resonance-audio-rs/src/: api.h
resonance-cxx/tests/: api_full_coverage.rs  api_spec.rs  destructor_smoke.rs  planar_edge_cases.rs  planar_pool_tests.rs  planar_smoke.rs
resonance-ffi/: Cargo.toml  build.rs  resonance_c_api.cc  resonance_c_api.h  wrapper.h
resonance-ffi/resonance-ffi/: Cargo.toml
resonance-ffi/src/: lib.rs
resonance/src/: lib.rs
resonance/tests/: api_buffers.rs  api_deep_integration.rs  api_smoke.rs  api_sources.rs
scripts/: run-real-audio-tests.ps1
tools/: pack-assets.ps1
tools/asset-packer/: Cargo.toml  README.md
tools/asset-packer/src/: main.rs
tools/asset-utils/: Cargo.toml
tools/asset-utils/src/: lib.rs
tools/pkg-validator/: Cargo.toml  README.md
tools/pkg-validator/src/: main.rs
tools/sfx-convert/: Cargo.toml  README.md
tools/sfx-convert/src/: main.rs
