

[workspace]
resolver = "3"
members = [
	"audio-backend",
	"audio-system",
	"resonance-cxx",
	"engine-core",
	"asset-manager",
	"integration-tests",
	"tools/asset-packer",
	"tools/sfx-convert",
	"tools/asset-utils",
	"tools/pkg-validator",
	"resonance-audio-engine",
	"app-bevy-windows"
]
 
[patch.crates-io]
# Use the upstream bevy-tnua source (branch main) to pick the current
# Bevy-0.16-compatible integration layer from the upstream repository.
bevy-tnua = { git = "https://github.com/idanarye/bevy-tnua", branch = "main" }
