[package]
name = "app-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.16"
crossterm = { version = "0.29", features = ["event-stream"] }
engine-core = { path = "../engine-core", features = ["world-loader"] }
engine-audio = { path = "../engine-audio" }
audio-backend = { path = "../audio-backend" }
audio-system = { path = "../audio-system" }
glam = "0.30"

[package.metadata.winres]
OriginalFilename = "AudioVerseCLI.exe"
