[package]
name = "audio-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15"
arc-swap = "1.6"
crossbeam-channel = "0.5"

[dev-dependencies]
resonance-cxx = { path = "../resonance-cxx" }
resonance-audio-engine = { path = "../resonance-audio-engine" }
audio-system = { path = "../audio-system" }

[features]
# The mock-audio feature enables the mock backend for tests and specific builds.
mock-audio = []
