[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.11"
thiserror = "1.0"
glam = "0.23"
# audio-system integration should be wired by the app to avoid cyclic
# path-dependencies; keep engine-core independent.
# Physics: Rapier (3D). Pin a recent stable version.
rapier3d = "0.23"
parry3d = "0.23"

[features]
world-loader = ["serde", "serde_json", "anyhow"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.anyhow]
version = "1.0"
optional = true
