[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bevy core ECS & scheduling (no renderer)
bevy_ecs = "0.16"
bevy_app = "0.16"
bevy_time = "0.16"
bevy = "0.16"

# Math & errors - prefer bevy_math so types (Vec3) match other bevy crates
bevy_math = "0.16"
bevy_input = "0.16"
bevy_transform = "0.16"
bevy_asset = "0.16"
bevy_audio = "0.16"
thiserror = "2.0"

# World loading
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0", optional = true }
ron = "0.8"

# Navigation & raycast (always available)
# NOTE: this crate is intentionally a small placeholder in this workspace; use the
# published placeholder version so cargo can resolve it during workspace checks.
bevy_navmesh = "0.0.1"
bevy_rapier3d = "0.31.0"

# Character controller helpers (Tnua)
# bevy-tnua v0.8 targets Bevy 0.16; the rapier integration crate aligns with Rapier
# integration layer versions. If cargo resolution fails, adjust versions to match
# the workspace Rapier version.
bevy-tnua = "0.24"

[features]
# Optional feature to enable world loading examples/tests and their dependencies.
# When enabled, the `world-loader` feature pulls in serde/serde_json/anyhow.
world-loader = ["anyhow"]
full_engine = []
