[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
audio-backend = { path = "../audio-backend" }
resonance-cxx = { path = "../resonance-cxx" }
asset_manager = { path = "../asset-manager" }
cxx = "1.0.168"
cpal = "0.15"
serial_test = "2.0"
resonance-audio-engine = { path = "../resonance-audio-engine" }
audio-system = { path = "../audio-system" }
engine-core = { path = "../engine-core" }
bevy_ecs = "0.11"
glam = "0.23"

[features]
real-audio-tests = []