[package]
name = "resonance-audio-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
resonance-cxx = { path = "../resonance-cxx" }
cxx = "1.0"
pin-utils = "0.1"
glam = "0.30.5"
anyhow = "1.0.99"
crossbeam-queue = "0.3"
ringbuf = "0.4"
asset_manager = { path = "../asset-manager" }
audio-backend = { path = "../audio-backend", package = "audio-backend" }

[build-dependencies]
cxx-build = "1.0"
